# memory

./: .gitignore  .gitmodules  LICENSE  README.md  library.json
src/: CMakeLists.txt  platform.h
src/exp/: llpool.h  netbuf.h
src/mc/: memory-chunk.h  memory-pool.h  memory.h  memory_index.h  memory_index2.h  memory_pool.h  netbuf.h  objstack.h  opts-internal.h
src/mc/mem/: platform.h
src/platform/lwip/: lwip-netbuf.h
src/tests/: main-test.cpp
test/pio/esp8266/: .gitignore
test/pio/esp8266/template/: user_main.c
test/unit-tests/: CMakeLists.txt  experimental.cpp  integrity.cpp  main.cpp  memory-chunk.cpp  memory_pool.cpp  memory_test.cpp  netbuf.cpp
unused/: linkedlist.h
